# verge-tui

./: .gitignore  CONTRIBUTING.md  Cargo.toml  NOTICE.md  README.md
.github/workflows/: apt-pages.yml  ci.yml  release.yml
apps/verge-tui/: Cargo.toml  README.md
apps/verge-tui/src/: main.rs
aur/verge-tui/: .SRCINFO  PKGBUILD
crates/mihomo-client/: Cargo.toml
crates/mihomo-client/src/: lib.rs
crates/verge-core/: Cargo.toml
crates/verge-core/src/: adapters.rs  lib.rs  state.rs  subscription.rs
docs/: ARCHITECTURE.md  COMMANDS.md  DEVELOPMENT.md  PACKAGING.md  RELEASE.md  USAGE.md
install/: README.md  install.sh  uninstall.sh
scripts/: aur-package.sh  aur-push.sh  build-apt-repo.sh  build-deb.sh  build-install.sh  proxy-clean-linux.sh
