[package]
name = "mihomo-client"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { version = "0.13.2", features = ["json", "rustls", "query"] }
tokio = { workspace = true, features = ["sync", "rt", "time", "net"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3.32"
http = "1.3.1"
url = "2.5.7"
urlencoding = "2.1.3"
