[package]
name = "verge-core"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml_ng = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
reqwest = { version = "0.13.2", features = ["json", "rustls", "cookies", "gzip", "brotli", "zstd"] }
url = "2.5.7"
urlencoding = "2.1.3"
sysproxy = { git = "https://github.com/clash-verge-rev/sysproxy-rs", branch = "0.4.5", features = ["guard"] }
dirs = "6.0.0"
